--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="images/logo-white.png" alt="Future Technologies logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
                 <ul>
@@ -178,7 +178,7 @@
                 <img
                     class="logo"
                     src="images/logo-white.png"
-                    alt="Levelupnews logo"
+                    alt="Future Technologies logo"
                 >
             </div>
             <h2>FRESH NEWS</h2>
@@ -272,7 +272,7 @@
 
     <footer>
         <div class="wrp-content-footer">
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="images/logo-white.png" alt="Future Technologies logo">
             <div class="wrp-links">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
