Fixed cloud html file name 2nd time

--- a/virtualReality.html
+++ b/virtualReality.html
@@ -167,7 +167,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="virtualReality.html">Virtual Reality</a></li>
                     <li><a href="IoT.html">IoT</a></li>
-                    <li><a href="Cloud.html">Cloud</a></li>
+                    <li><a href="cloud.html">Cloud</a></li>
                     <li><a href="artificialIntelligence.html">AI</a></li>
                 </ul>
             </div>
