Fixed IT article text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="slogan">
-            <h1>BE COOL,<br>BE Adaptive</h1>
+            <h1>BE COOL<br>BE Adaptive</h1>
         </div>
         <video class="main-bg" autoplay muted loop>
             <source src="images/High tech digital world background.mp4" type="video/mp4">
@@ -106,10 +106,10 @@
                     <p>
                         Technology today is evolving at a rapid pace, enabling faster change and progress, 
                         causing an acceleration of the rate of change. However, it is not only technology 
-                        trends and emerging technologies that are evolving, a lot more has changed this 
-                        year due to the outbreak of COVID-19 making IT professionals realize that their 
-                        role will not stay the same in the contactless world tomorrow. And an IT professional 
-                        in 2023-24 will constantly be learning, unlearning, and relearning (out of necessity if not desire).
+                        trends and emerging technologies that are evolving, a lot more changed during 
+                        the outbreak of COVID-19 making IT professionals realize that their role will not stay the same 
+                        in the contactless world tomorrow. And an IT professional in 2023-24 will constantly be learning, 
+                        unlearning, and relearning (out of necessity if not desire).
                     </p>
                 </div>
             </article>
@@ -195,7 +195,7 @@
                             <h3>ARTIFICIAL INTELLIGENCE IN FUTURE SOCIETY</h3>
                             <div class="article-info">
                                 <p>Tech News</p>
-                                <p>Feb 14, 2022</p>
+                                <p>Feb. 14, 2022</p>
                                 <p>Gil Katz</p>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                 <h3>VIRTUAL REALITY HAS POTENTIAL</h3>
                                 <div class="article-info">
                                     <p>Tech News</p>
-                                    <p>Feb 12, 2023</p>
+                                    <p>Feb. 12, 2023</p>
                                     <p>Gil Katz</p>
                                 </div>
                             </div>
@@ -244,7 +244,7 @@
                                 <h3>Augmented Reality Impact</h3>
                                 <div class="article-info">
                                     <p>Tech News</p>
-                                    <p>Feb 12, 2023</p>
+                                    <p>Feb. 12, 2023</p>
                                     <p>Gil Katz</p>
                                 </div>
                             </div>
