added comments to html files and fixed homepage/vr page text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:site_name" content="Future technologies">
+    <meta property="og:title" content="Virtual Reality in the future" />
+    <meta property="og:description" content="How VR is influencing fields like health care and education" />
+    <meta property="book:author" content="Gil Katz">
+    
     <title>Homepage</title>
     <script
         src="https://kit.fontawesome.com/1e15723684.js"
@@ -18,6 +23,7 @@
             <img class="logo" src="images/logo-white.png" alt="Future Technologies logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
+                <!--These are the nav links found at the top of the page.-->
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="virtualReality.html">Virtual Reality</a></li>
@@ -25,6 +31,7 @@
                     <li><a href="cloud.html">Cloud</a></li>
                     <li><a href="artificialIntelligence.html">AI</a></li>
                     <li>
+                        <!--This is the search button/search bar-->
                         <button aria-label="Search button" id="btnSearch">
                             <i aria-hidden="true" class="fa-solid fa-magnifying-glass"></i>
                         </button>
@@ -53,6 +60,7 @@
             </button>
         </nav>
 
+        <!--This div container gives responsive design.-->
         <div class="wrp-menu-mobile" id="menu_mobile">
             <ul>
                 <li>
@@ -90,6 +98,7 @@
 
     <main id="main-index">
         <div class="wrp-filler-items">
+            <!--Below is the IT article-->
             <article>
                 <img
                     class="img-filler-item"
@@ -108,12 +117,13 @@
                         causing an acceleration of the rate of change. However, it is not only technology 
                         trends and emerging technologies that are evolving, a lot more changed during 
                         the outbreak of COVID-19 making IT professionals realize that their role will not stay the same 
-                        in the contactless world tomorrow. And an IT professional in 2023-24 will constantly be learning, 
-                        unlearning, and relearning (out of necessity if not desire).
+                        in the contactless world tomorrow. IT professionals in 2023 will constantly be learning, 
+                        unlearning, and relearning (out of necessity if not desire) to maintain their job stability.
                     </p>
                 </div>
             </article>
 
+            <!--Below is the Cloud Computing article-->
             <article>
                 <img
                     class="img-filler-item"
@@ -129,9 +139,9 @@
 
                 <div class="middle-section">
                     <p>
-                        Cloud computing is changing faster than we ever imagined. Every day, 
-                        new features and capabilities have been released that change how we think 
-                        about, use, and administer cloud services. Thus, the cloud computing future 
+                        Cloud computing is changing faster than people ever imagined.
+                        New features are being released and change how we think 
+                        about, use, and administer cloud services. The cloud computing future 
                         looks pretty bright and stable. So, what does the future hold for this transformative technology?
                     </p>
                 </div>
@@ -141,6 +151,7 @@
                 </div>
             </article>
 
+            <!--Below is the IoT article-->
             <article>
                 <img
                     class="img-filler-item"
@@ -158,7 +169,7 @@
                         The Internet of Things is a fast growing industry that can be 
                         divided into several categories: consumer, commercial, and industrial. 
                         When we think of IoT as a consumer, we may think of a refrigerator telling 
-                        us when we’re out of milk, but that’s not what makes IoT revolutionary. 
+                        us when we're out of milk, but that's not what makes IoT revolutionary. 
                         Instead, the fridge should be able to collect energy usage and generate data 
                         from all across the grid, then utilize this data to figure out how to best 
                         distribute energy resources to optimize overall energy consumption, 
@@ -183,6 +194,7 @@
             </div>
             <h2>FRESH NEWS</h2>
             <div class="wrp-articles">
+                <!--Below is news reguarding AI-->
                 <article>
                     <a href="artificialIntelligence.html">
                         <img
@@ -208,6 +220,7 @@
                     </div>
                 </article>
 
+                <!--Below is news reguarding VR-->
                 <article>
                     <a href="virtualReality.html">
                         <img
@@ -232,6 +245,7 @@
                     </a>
                 </article>
 
+                <!--Below is news reguarding AR-->
                 <article>
                     <a href="virtualReality.html">
                         <img
@@ -249,16 +263,15 @@
                                 </div>
                             </div>
                             <div class="wrp-content-article">
-                                The first validation of consumer augmented reality technology use came from 
-                                the explosively popular AR app Pokémon Go. Before then, nobody had thought about 
-                                AR experiences or applications on a smartphone. This unexpected use of mobile 
-                                AR successfully validated the consumer mass adoption of augmented reality.  
+                                Augmented Reality technology exploded with the mobile app game "Pokemon Go". 
+                                Before then, nobody had really thought about AR experiences or applications on a smartphone. 
+                                This unexpected use of mobile AR successfully validated the consumer mass adoption of augmented reality.  
                             </div>
                         </div>
                     </a>
                 </article>
             </div>
-      </div>
+        </div>
 
         <section class="wrp-soccer-ball">
             <h3>FUTURE TECHNOLOGIES!</h3>
@@ -274,6 +287,7 @@
         <div class="wrp-content-footer">
             <img class="logo" src="images/logo-white.png" alt="Future Technologies logo">
             <div class="wrp-links">
+                <!--These are the footer links found at the bottom of the page.-->
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="virtualReality.html">Virtual Reality</a></li>
@@ -283,6 +297,7 @@
                 </ul>
             </div>
 
+            <!--These are social media links-->
             <div class="wrp-socialmedia">
                 <ul>
                     <li>
