--- a/artificialIntelligence.html
+++ b/artificialIntelligence.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:site_name" content="Future technologies">
+    <meta property="og:title" content="Virtual Reality in the future" />
+    <meta property="og:description" content="How VR is influencing fields like health care and education" />
+    <meta property="book:author" content="Gil Katz">
+    
     <title>AI-page</title>
     <script
         src="https://kit.fontawesome.com/1e15723684.js"
@@ -19,6 +24,7 @@
             <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
+                <!--These are the nav links found at the top of the page.-->
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="virtualReality.html">Virtual Reality</a></li>
@@ -26,6 +32,7 @@
                     <li><a href="cloud.html">Cloud</a></li>
                     <li><a href="artificialIntelligence.html">AI</a></li>
                     <li>
+                        <!--This is the search button/search bar-->
                         <button aria-label="Search button" id="btnSearch">
                             <i aria-hidden="true" class="fa-solid fa-magnifying-glass"></i>
                         </button>
@@ -54,6 +61,7 @@
             </button>
         </nav>
 
+        <!--This div container gives responsive design.-->
         <div class="wrp-menu-mobile" id="menu_mobile">
             <ul>
                 <li>
@@ -151,6 +159,7 @@
         <div class="wrp-content-footer">
             <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
             <div class="wrp-links">
+                <!--These are the footer links found at the bottom of the page.-->
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="virtualReality.html">Virtual Reality</a></li>
@@ -160,6 +169,7 @@
                 </ul>
             </div>
 
+            <!--These are social media links-->
             <div class="wrp-socialmedia">
                 <ul>
                     <li>
