--- a/virtualReality.html
+++ b/virtualReality.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Virtual Reality in the future" />
+    <meta property="og:description" content="How VR is influencing fields like health care and education" />
     <title>VR-page</title>
     <script
         src="https://kit.fontawesome.com/1e15723684.js"
@@ -19,6 +21,7 @@
             <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
+                <!--These are the nav links found at the top of the page.-->
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="virtualReality.html">Virtual Reality</a></li>
@@ -26,6 +29,7 @@
                     <li><a href="cloud.html">Cloud</a></li>
                     <li><a href="artificialIntelligence.html">AI</a></li>
                     <li>
+                        <!--This is the search button/search bar-->
                         <button aria-label="Search button" id="btnSearch">
                             <i aria-hidden="true" class="fa-solid fa-magnifying-glass"></i>
                         </button>
@@ -54,6 +58,7 @@
             </button>
         </nav>
 
+        <!--This div container gives responsive design.-->
         <div class="wrp-menu-mobile" id="menu_mobile">
             <ul>
                 <li>
@@ -106,13 +111,11 @@
                 <img src="images/vrEducation.jpeg" alt="Kid using vr headset during school project">
                 <h2>VR IN EDUCATION</h2>
                 <p>
-                    The traditional educational process means a dry presentation of facts and putting theory into practice. 
+                    The traditional educational process presents theory into practice. 
                     Many generations have learned according to this “golden” formula. But there is one problem: this model 
                     doesn't take into account the individual characteristics of students.
                     Those with poor academic performance cannot memorize large amounts of information.  
-                    Some schoolchildren are visual learners: it is important for them to “see” the object of study, and not just hear or read about it.
-                    That is why teachers evaluate VR as a universal educational method that can interest students, regardless of their abilities and hobbies. 
-                    Let's look into the future of VR in education, which is gradually becoming a reality.
+                    Some children are visual learners: it is important for them to “see” the object of study, and not just hear or read about it.
                 </p>
                 <p>
                     Modern schoolchildren and students are accustomed to games and entertainment, with levels, points, and rewards. 
@@ -121,10 +124,9 @@
                     to teach kids more productively.
                 </p>
                 <p>
-                    According to one survey, even back in 2018, 18% of US educational institutions fully deployed VR, and 46% of colleges employed VR 
-                    in some form on campus. So, it's clear that the prospects for this technology are stunning. XR experts believe the education and healthcare 
-                    industries are leaders in the use of immersive technologies. VR in education  is forecast to be a $700 million market by 2025. 
-                    Fortune Business Insights even predicts that the VR in education market will grow from $656 million in 2018 to $13 billion in 2026.
+                    XR experts believe the education and healthcare industries are leaders in the use of immersive technologies. 
+                    VR in education is forecast to be a $700 million market by 2025. Fortune Business Insights even predicts 
+                    that the VR in education market will grow from $656 million in 2018 to $13 billion in 2026.
                 </p>
             </section>
             <section class="second-section">
@@ -133,15 +135,12 @@
                     <h2>VR IN HEALTH CARE</h2>
                     <p>
                         One of the biggest problems in healthcare right now is that patients are not able to fully engage in care because they feel 
-                        scared or anxious about undergoing physical therapy for their injury or illness. This article talks about 
-                        how VR could help improve patient engagement using an avatar made of soft foam that mimics the shape of a patient's body. 
-                        It also discusses how VR could be used to train health care professionals on how to better interact with their patients and create 
-                        a positive therapeutic environment for them during treatment sessions.
+                        scared or anxious about undergoing physical therapy for their injury or illness.
                     </p>
                     <p>
                         VR and other immersive technologies are being used in a variety of ways in healthcare. They have the potential to improve patient 
                         education, training and other aspects of care.
-                        The use of VR in healthcare is not limited to professional training, though. Many patients have reported that they have enjoyed 
+                        The use of VR in healthcare is not limited to professional training. Many patients have reported that they have enjoyed 
                         using virtual reality. This is because it allows them to experience a more realistic environment with more interesting sensations 
                         than what they're used to.
                     </p>
@@ -163,6 +162,7 @@
         <div class="wrp-content-footer">
             <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
             <div class="wrp-links">
+                <!--These are the footer links found at the bottom of the page.-->
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="virtualReality.html">Virtual Reality</a></li>
@@ -172,6 +172,7 @@
                 </ul>
             </div>
 
+            <!--These are social media links-->
             <div class="wrp-socialmedia">
                 <ul>
                     <li>
