edited the text on all pages

--- a/IoT.html
+++ b/IoT.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Future technologies">
-    <meta property="og:title" content="Virtual Reality in the future" />
-    <meta property="og:description" content="How VR is influencing fields like health care and education" />
+    <meta property="og:title" content="IoT in the future">
+    <meta property="og:description" content="How IoT is influencing people">
     <meta property="book:author" content="Gil Katz">
     
     <title>IoT-page</title>
@@ -16,7 +16,6 @@
     ></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
-
 </head>
 <body>
     <header>
@@ -113,9 +112,7 @@
             <section class="first-section">
                 <img src="images/IoT_Business.png" alt="Machine at factory">
                 <h2>IOT INFLUENCE IN BUSINESS</h2>
-                <p>
-                    Advanced technologies such as Artificial Intelligence (AI), Machine Learning (ML), 
-                    and the Internet of Things (IoT) have emerged as the latest software trends. Just like AI and ML, 
+                <p> 
                     IoT is creating a buzz around the world. It has impacted mobile app development industries in such 
                     a way that various organizations are integrating IoT into applications to ensure improvised user experiences. 
                     Whether healthcare, manufacturing, agriculture, or retail, every business looks forward to IoT solutions for 
@@ -124,12 +121,11 @@
                 </p>
                 <p>
                     It is evident that businesses are moving towards IoT mobile app development to grow their business rapidly.
-                    You must have heard — data is the new oil. With IoT technology, your business can use every data point 
-                    to achieve growth goals and optimize processes. 
+                    With IoT technology, your business can use every data point to achieve growth goals and optimize processes. 
                 </p>
                 <p>
                     IoT solutions also streamline existing processes across manufacturing, supply chain, production, and other industries. 
-                    Streamlined operations minimize downtime and decrease costs.The manufacturing industry is the best example of cost 
+                    Streamlined operations minimize downtime and decrease costs. The manufacturing industry is the best example of cost 
                     reduction via IoT technology.
                 </p>
             </section>
@@ -138,13 +134,12 @@
                 <div class="second-section-body">
                     <h2>IOT SMART CITIES</h2>
                     <p>
-                        There isn't one exact definition of a smart city. However, a smart city is usually defined as a city that uses 
-                        IoT and ICT (information and communications technology) to enhance infrastructure and services provided to citizens 
-                        and businesses. In addition, a smart city project aims to streamline a city’s day-to-day operations.
-                        A smart city uses several technologies, such as IoT, artificial intelligence (AI), software solutions, communication networks, 
-                        and more. IoT is the key to turning a city into a smart city. IoT is a system of several connected devices, such as sensors, 
-                        vehicles, and home appliances. IoT devices can communicate and transfer data via the internet without any human intervention. 
-                        An IoT smart city also utilizes edge computing, creating an edge computing smart city. Edge computing brings compute power 
+                        A smart city is usually defined as a city that uses IoT and ICT (information and communications technology) 
+                        to enhance infrastructure and services provided to citizens and businesses. In addition, a smart city can help people access 
+                        information quicker. A smart city uses several technologies, such as IoT, artificial intelligence (AI), software solutions, 
+                        communication networks, and more. IoT is the key to turning a city into a smart city. IoT is a system of several connected devices, 
+                        such as sensors, vehicles, and home appliances. IoT devices can communicate and transfer data via the internet without any human 
+                        intervention. An IoT smart city also utilizes edge computing, creating an edge computing smart city. Edge computing brings compute power 
                         closer to an IoT device to save bandwidth and reduce latency.
                     </p>
                     <p>
