--- a/artificialIntelligence.html
+++ b/artificialIntelligence.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Future technologies">
-    <meta property="og:title" content="Virtual Reality in the future" />
-    <meta property="og:description" content="How VR is influencing fields like health care and education" />
+    <meta property="og:title" content="AI in the future">
+    <meta property="og:description" content="How AI is influencing people">
     <meta property="book:author" content="Gil Katz">
     
     <title>AI-page</title>
@@ -16,7 +16,6 @@
     ></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
-
 </head>
 <body>
     <header>
@@ -104,25 +103,25 @@
             vaccines and cures, in delivering healthcare services, and in analysis and decision making by governments and public authorities - AI 
             & data are being used now more than ever.
             Moreover, the digital transformation of virtually all industries has been accelerated due to COVID. The new digital economy needs AI & 
-            data to see the big picture, make smart decisions, move fast and automate processes. AI & data are entering their golden age.
+            data to see the big picture, make smart decisions, move fast and automate processes.
         </p>
         <div class="body-content">
             <section class="first-section">
                 <img src="images/ai_voice_assistant.jpeg" alt="A microphone icon with sound wave underneath">
                 <h2>AI VOICE ASSISTANT</h2>
                 <p>
-                    Voice search is pretty much what it sounds like - using your own voice (rather than a keyboard) to ask questions or give commands to your smartphone, 
+                    Voice search is about using your own voice rather than a keyboard to ask questions or give commands to your smartphone, 
                     wearable device, or smart speaker. You simply need to speak to the device and it will answer your question or execute the desired task.
                 </p>
                 <p>
                     Meanwhile, voice assistants are special programs that can recognize humans via speech recognition and natural language processing technologies, 
-                    “translate” words into machine commands, then perform the desired tasks. They are also getting smarter with time - the more you interact with a voice assistant, 
-                    the better it can understand your preferences and match its actions to your expectations.
+                    “translate” words into machine commands, then perform the desired tasks. They are also getting smarter with time, the more you interact with a 
+                    voice assistant, the better it can understand your preferences and match its actions to your expectations.
                 </p>
                 <p>
-                    Although using voice search was already fairly popular thanks to Siri and Alexa, the technology really took off once voice assistants became available on smartphones, 
-                    tablets, and wearables. And as more people get comfortable talking into their phones or intelligent virtual assistants, the more this trend is set to catch on.
-                    Just look - by 2024, the number of digital voice assistants is expected to reach 8.4 billion units, meaning there would actually be more voice assistants in the world than humans.
+                    Although using voice search was already fairly popular thanks to Siri and Alexa, the technology really took off once voice assistants became 
+                    available on smartphones, tablets, and wearables. And as more people get comfortable talking into their phones or intelligent 
+                    virtual assistants, the more this trend is set to catch on.
                 </p>
             </section>
             <section class="second-section">
@@ -130,19 +129,21 @@
                 <div class="second-section-body">
                     <h2>ROBOTS WITH AI</h2>
                     <p>
-                        Although robotics and AI have always been in the conversation, the last two decades have seen a rapid rise in their development and application. 
-                        Fear of the misconception that these machines will take over our jobs has been allayed.
+                        Although robotics and AI have always been in the conversation, the last two decades have seen a rapid rise in their development 
+                        and application. Fear of the misconception that these machines will take over our jobs has been allayed.
                         Instead, robots and AI complement humans, helping us get more done at a faster rate with more accuracy than we can on our own. 
                         Advances in AI have allowed us to create computer systems that can learn and adapt over time. Alexa, Siri, Google Assistant and other 
                         similar tools have all become a big part of how we interact with machines and AI in our daily activities.
                     </p>
                     <p>
-                        Although understanding robotics and AI can be a complex and challenging process, it can also be an exciting opportunity to explore the cutting edge of technology. 
-                        Robotics and AI are rapidly evolving fields, with new advances every day as these technologies provide an insight into the future of human-computer interaction and automation.
+                        Although understanding robotics and AI can be a complex and challenging process, it can also be an exciting opportunity to explore 
+                        the cutting edge of technology. Robotics and AI are rapidly evolving fields, with new advances every day as these technologies 
+                        provide an insight into the future of human-computer interaction and automation.
 
-                        Although most people are accustomed to interchanging robotics and AI to mean the same thing, they're distinct fields. Robotics is an aspect of computer science and engineering 
-                        in which machines are built and programmed to perform tasks without human interference. AI, however, encompasses systems that emulate the human mind to learn, solve problems and 
-                        make decisions independently without needing the already programmed instructions.
+                        Although most people are accustomed to interchanging robotics and AI to mean the same thing, they're distinct fields. 
+                        Robotics is an aspect of computer science and engineering in which machines are built and programmed to perform tasks without 
+                        human interference. AI, however, encompasses systems that emulate the human mind to learn, solve problems and make decisions 
+                        independently without needing the already programmed instructions.
                     </p>
                     <p>
                         Even though the future is already upon us with the way technology and innovation are at the heart of everything we do, 
