--- a/cloud.html
+++ b/cloud.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Future technologies">
-    <meta property="og:title" content="Virtual Reality in the future" />
-    <meta property="og:description" content="How VR is influencing fields like health care and education" />
+    <meta property="og:title" content="Cloud Computing in the future">
+    <meta property="og:description" content="How cloud computing is influencing people">
     <meta property="book:author" content="Gil Katz">
     
     <title>Cloud-page</title>
@@ -16,7 +16,6 @@
     ></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
-
 </head>
 <body>
     <header>
@@ -101,11 +100,10 @@
     <main>
         <p id="intro">
             These days, our heads are all in the cloud. And like the clouds above us, a few formations 
-            and patterns have begun to prevail. However, unlike the cirrus and cumulus formations we see 
-            in the sky, the shapes in cloud computing trends look an awful lot like what we have seen in 
-            tech over the past decade. Seven years ago, Uber began redefining transit, especially in 
-            urban areas; next came food delivery services, which spiked in use during the pandemic; 
-            now, we are seeing this on-demand model transmute into a variety of cloud-based services. 
+            and patterns have begun to prevail. However, unlike clouds in the sky, the shapes in cloud computing 
+            trends look an awful lot like what we have seen in tech over the past decade. Seven years ago, 
+            Uber began redefining transit, especially in urban areas. Next came food delivery services, which became 
+            very popular during the pandemic. Now, we are seeing this on-demand model transmute into a variety of cloud-based services. 
             On-demand logic translates handily into the computing space. Unless you're a billionaire, 
             it's unlikely that you have the resources to pay for a private driver who waits for you 
             and/or brings you food. For the rest of us, we turn to interfaces like Uber and DoorDash 
@@ -137,11 +135,9 @@
                     with data for profit (Mosco 2014). 
                 </p>
                 <p>
-                    Nevertheless, for simple questions such as what are the likes and dislikes of every conceivable 
-                    demographic cohort or for drawing conclusions about users based on their friendship and follower networks, the massively large stores 
-                    of data available for analysis in the digital factories that make up the Cloud, offer major incentives for companies and governments 
-                    to invest in both Cloud data centers and in Big Data analysis. It is reasonable to be concerned that singular reliance on Big Data 
-                    in research is paving the way for what one might call digital positivism.
+                    The massively large stores of data available for analysis in the digital factories that make up the Cloud, offer major incentives 
+                    for companies and governments to invest in both Cloud data centers and in Big Data analysis. It is reasonable to be concerned that 
+                    singular reliance on Big Data in research is paving the way for what one might call digital positivism.
                 </p>
             </section>
             <section class="second-section">
@@ -167,15 +163,6 @@
                         is divided up into several virtual machines, and routing protocols to send data over the network. In fact, research 
                         is underway to develop each of these for the quantum internet. With quantum computer operating systems still under development, 
                         it is difficult to develop a hypervisor to run multiple operating systems on the same quantum computer as a classical hypervisor would.
-
-                        By understanding the physical architecture of quantum computers, however, one can start to imagine how it might be organised 
-                        to support different subsets of qubits to effectively run as separate quantum computers, potentially using different 
-                        physical qubit technologies and employing different sub-architectures, within a single machine.
-
-                        One important difference between quantum and classical computers and networks is that quantum computers can make use of 
-                        classical computers to perform many of their functions. In fact, a quantum computer in itself is a tremendous feat of 
-                        classical system engineering with many complex controls to set up and operate the quantum computations. 
-                        This is a very different starting point from classical computers.
                     </p>
                 </div>
             </section>
