--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Future technologies">
-    <meta property="og:title" content="Virtual Reality in the future" />
-    <meta property="og:description" content="How VR is influencing fields like health care and education" />
+    <meta property="og:title" content="Future technologies">
+    <meta property="og:description" content="How technology is influencing the whole world">
     <meta property="book:author" content="Gil Katz">
     
     <title>Homepage</title>
