--- a/virtualReality.html
+++ b/virtualReality.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:site_name" content="Future technologies">
     <meta property="og:title" content="Virtual Reality in the future" />
     <meta property="og:description" content="How VR is influencing fields like health care and education" />
+    <meta property="book:author" content="Gil Katz">
+    
     <title>VR-page</title>
     <script
         src="https://kit.fontawesome.com/1e15723684.js"
@@ -13,7 +16,6 @@
     ></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
-
 </head>
 <body>
     <header>
