fixed filepaths and syntax on all files VERSION1

--- a/html_Website/artificialIntelligence.html
+++ b/html_Website/artificialIntelligence.html
@@ -14,13 +14,13 @@
         src="https://kit.fontawesome.com/1e15723684.js"
         crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
                 <!--These are the nav links found at the top of the page.-->
@@ -92,7 +92,7 @@
             <h1>ARTIFICIAL<br>INTELLIGENCE</h1>
         </div>
         <video class="main-bg" autoplay muted loop>
-            <source src="images/AI_Video.mp4" type="video/mp4">
+            <source src="/images/AI_Video.mp4" type="video/mp4">
         </video>
     </header>
         
@@ -107,7 +107,7 @@
         </p>
         <div class="body-content">
             <section class="first-section">
-                <img src="images/ai_voice_assistant.jpeg" alt="A microphone icon with sound wave underneath">
+                <img src="/images/ai_voice_assistant.jpeg" alt="A microphone icon with sound wave underneath">
                 <h2>AI VOICE ASSISTANT</h2>
                 <p>
                     Voice search is about using your own voice rather than a keyboard to ask questions or give commands to your smartphone, 
@@ -125,7 +125,7 @@
                 </p>
             </section>
             <section class="second-section">
-                <img src="images/aiRobot.jpeg" alt="AI robot">
+                <img src="/images/aiRobot.jpeg" alt="AI robot">
                 <div class="second-section-body">
                     <h2>ROBOTS WITH AI</h2>
                     <p>
@@ -158,7 +158,7 @@
     <!--This is the bottom of the webpage-->
     <footer>
         <div class="wrp-content-footer">
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <div class="wrp-links">
                 <!--These are the footer links found at the bottom of the page.-->
                 <ul>
