--- a/html_Website/index.html
+++ b/html_Website/index.html
@@ -14,13 +14,13 @@
         src="https://kit.fontawesome.com/1e15723684.js"
         crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/logo-white.png" alt="Future Technologies logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
                 <!--These are the nav links found at the top of the page.-->
@@ -92,7 +92,7 @@
             <h1>BE COOL<br>BE Adaptive</h1>
         </div>
         <video class="main-bg" autoplay muted loop>
-            <source src="images/High tech digital world background.mp4" type="video/mp4">
+            <source src="/images/high_tech_digital_world_background.mp4" type="video/mp4">
         </video>
     </header>
 
@@ -102,7 +102,7 @@
             <article>
                 <img
                     class="img-filler-item"
-                    src="images/informationTechnology_Image.jpeg"
+                    src="/images/informationTechnology_Image.jpeg"
                     alt="2 people walking in data center"
                 >
                 <div class="top-section">
@@ -127,7 +127,7 @@
             <article>
                 <img
                     class="img-filler-item"
-                    src="images/cloud_Image.jpeg"
+                    src="/images/cloud_Image.jpeg"
                     alt="Cloud technology icon"
                 >
                 <div class="top-section">
@@ -155,7 +155,7 @@
             <article>
                 <img
                     class="img-filler-item"
-                    src="images/IoT_image.jpeg"
+                    src="/images/IoT_image.jpeg"
                     alt=" City image with network icons "
                 >
                 <div class="top-section">
@@ -188,7 +188,7 @@
             <div class="wrp-logo">
                 <img
                     class="logo"
-                    src="images/logo-white.png"
+                    src="/images/logo-white.png"
                     alt="Future Technologies logo"
                 >
             </div>
@@ -199,7 +199,7 @@
                     <a href="artificialIntelligence.html">
                         <img
                             class="img-article"
-                            src="images/AI.webp"
+                            src="/images/AI.webp"
                             alt=" Robot using AI technology"
                         >
                     <div class="wrp-body-article">
@@ -216,7 +216,6 @@
                             It is already the main driver of emerging technologies like big data, robotics and IoT, 
                             and it will continue to act as a technological innovator for the foreseeable future.
                         </div>
-                    </a>    
                     </div>
                 </article>
 
@@ -225,7 +224,7 @@
                     <a href="virtualReality.html">
                         <img
                             class="img-article"
-                            src="images/virtual reality.jpeg"
+                            src="/images/virtual reality.jpeg"
                             alt="Person using VR headset"
                         >
                         <div class="wrp-body-article">
@@ -250,7 +249,7 @@
                     <a href="virtualReality.html">
                         <img
                             class="img-article"
-                            src="images/augmentedReality_Image.jpeg"
+                            src="/images/augmentedReality_Image.jpeg"
                             alt="Augmented Reality technology on mobile device"
                         >
                         <div class="wrp-body-article">
@@ -272,20 +271,11 @@
                 </article>
             </div>
         </div>
-
-        <section class="wrp-soccer-ball">
-            <h3>FUTURE TECHNOLOGIES!</h3>
-            <div class="wrp-ball">
-                <div class="ball">
-                    <i aria-hidden="true" class="fa-regular fa-futbol"></i>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer>
         <div class="wrp-content-footer">
-            <img class="logo" src="images/logo-white.png" alt="Future Technologies logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <div class="wrp-links">
                 <!--These are the footer links found at the bottom of the page.-->
                 <ul>
