--- a/html_Website/virtualReality.html
+++ b/html_Website/virtualReality.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Future technologies">
-    <meta property="og:title" content="Virtual Reality in the future" />
-    <meta property="og:description" content="How VR is influencing fields like health care and education" />
+    <meta property="og:title" content="Virtual Reality in the future">
+    <meta property="og:description" content="How VR is influencing fields like health care and education">
     <meta property="book:author" content="Gil Katz">
     
     <title>VR-page</title>
@@ -14,13 +14,13 @@
         src="https://kit.fontawesome.com/1e15723684.js"
         crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
                 <!--These are the nav links found at the top of the page.-->
@@ -92,7 +92,7 @@
             <h1>VIRTUAL<br>REALITY</h1>
         </div>
         <video class="main-bg" autoplay muted loop>
-            <source src="images/virtualRealityHeader.mp4" type="video/mp4">
+            <source src="/images/virtualRealityHeader.mp4" type="video/mp4">
         </video>
     </header>
         
@@ -110,7 +110,7 @@
         </p>
         <div class="body-content">
             <section class="first-section">
-                <img src="images/vrEducation.jpeg" alt="Kid using vr headset during school project">
+                <img src="/images/vrEducation.jpeg" alt="Kid using vr headset during school project">
                 <h2>VR IN EDUCATION</h2>
                 <p>
                     The traditional educational process presents theory into practice. 
@@ -132,7 +132,7 @@
                 </p>
             </section>
             <section class="second-section">
-                <img src="images/vrHealth.jpeg" alt="Doctor using VR headset">
+                <img src="/images/vrHealth.jpeg" alt="Doctor using VR headset">
                 <div class="second-section-body">
                     <h2>VR IN HEALTH CARE</h2>
                     <p>
@@ -162,7 +162,7 @@
     <!--This is the bottom of the webpage-->
     <footer>
         <div class="wrp-content-footer">
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="/images/logo-white.png" alt="LFuture Technologies logo">
             <div class="wrp-links">
                 <!--These are the footer links found at the bottom of the page.-->
                 <ul>
