--- a/html_Website/IoT.html
+++ b/html_Website/IoT.html
@@ -14,13 +14,13 @@
         src="https://kit.fontawesome.com/1e15723684.js"
         crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
                 <!--These are the nav links found at the top of the page.-->
@@ -92,7 +92,7 @@
             <h1>INTERNET<br>OF THINGS</h1>
         </div>
         <video class="main-bg" autoplay muted loop>
-            <source src="images/IoT_Video.mp4" type="video/mp4">
+            <source src="/images/IoT_Video.mp4" type="video/mp4">
         </video>
     </header>
         
@@ -110,7 +110,7 @@
         </p>
         <div class="body-content">
             <section class="first-section">
-                <img src="images/IoT_Business.png" alt="Machine at factory">
+                <img src="/images/IoT_Business.png" alt="Machine at factory">
                 <h2>IOT INFLUENCE IN BUSINESS</h2>
                 <p> 
                     IoT is creating a buzz around the world. It has impacted mobile app development industries in such 
@@ -130,7 +130,7 @@
                 </p>
             </section>
             <section class="second-section">
-                <img src="images/IoT_smartCity.jpeg" alt="city with differnt technological icons">
+                <img src="/images/IoT_smartCity.jpeg" alt="city with differnt technological icons">
                 <div class="second-section-body">
                     <h2>IOT SMART CITIES</h2>
                     <p>
@@ -162,7 +162,7 @@
     <!--This is the bottom of the webpage-->
     <footer>
         <div class="wrp-content-footer">
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <div class="wrp-links">
                 <!--These are the footer links found at the bottom of the page.-->        
                 <ul>
