--- a/html_Website/cloud.html
+++ b/html_Website/cloud.html
@@ -14,13 +14,13 @@
         src="https://kit.fontawesome.com/1e15723684.js"
         crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <h1>Future Technologies</h1>
             <div class="wrp-menu">
                 <!--These are the nav links found at the top of the page.-->
@@ -92,7 +92,7 @@
             <h1>CLOUD<br>COMPUTING</h1>
         </div>
         <video class="main-bg" autoplay muted loop>
-            <source src="images/cloudVideo.mp4" type="video/mp4">
+            <source src="/images/cloudVideo.mp4" type="video/mp4">
         </video>
     </header>
         
@@ -114,7 +114,7 @@
         </p>
         <div class="body-content">
             <section class="first-section">
-                <img src="images/bigData.jpeg" alt="big data device icons">
+                <img src="/images/bigData.jpeg" alt="big data device icons">
                 <h2>ClOUD COMPUTING IN BIG DATA</h2>
                 <p>
                     Big Data Analytics makes up the second leg of the Next Internet. In spite of the proliferation of fancy new titles, 
@@ -141,7 +141,7 @@
                 </p>
             </section>
             <section class="second-section">
-                <img src="images/quantomComputer.webp" alt="Person using qunatom computer">
+                <img src="/images/quantomComputer.webp" alt="Person using qunatom computer">
                 <div class="second-section-body">
                     <h2>USING CLOUD COMPUTING FOR QUANTOM COMPUTING</h2>
                     <p>
@@ -172,7 +172,7 @@
     <!--This is the bottom of the webpage-->
     <footer>
         <div class="wrp-content-footer">
-            <img class="logo" src="images/logo-white.png" alt="Levelupnews logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <div class="wrp-links">
                 <!--These are the footer links found at the bottom of the page.-->
                 <ul>
